--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,10 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
+    "allowJs": true,
+    "allowImportingTsExtensions": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
