--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "framer-motion": "^11.0.6",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-parallax": "^3.5.1"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.17",
