--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
   },
   "dependencies": {
     "@popmotion/popcorn": "^0.4.4",
+    "@types/lodash": "^4.17.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@vanilla-extract/dynamic": "^2.1.0",
     "framer-motion": "^11.0.6",
-    "next": "14.1.0",
+    "lodash": "^4.17.21",
+    "next": "^14.1.3",
     "popmotion": "^11.0.5",
+    "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-parallax": "^3.5.1"
+    "react-lorem-ipsum": "^1.4.10",
+    "react-parallax": "^3.5.1",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.17",
