--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/lodash": "^4.17.0",
     "@types/react-router-dom": "^5.3.3",
     "@vanilla-extract/dynamic": "^2.1.0",
+    "boxicons": "^2.1.4",
     "framer-motion": "^11.0.6",
     "lodash": "^4.17.21",
     "next": "^14.1.3",
