--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "@storybook/test": "^7.6.17",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.67",
+    "@types/react-dom": "^18.2.22",
+    "@types/webpack-env": "^1.18.4",
     "@vanilla-extract/next-plugin": "^2.3.6",
     "@vanilla-extract/webpack-plugin": "^2.3.6",
     "eslint": "^8",
