--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "omijaia",
-<<<<<<< HEAD
   "version": "3.0.1",
-=======
   "version": "3.0.0",
->>>>>>> 1166e7dd84fda5cb78098455093d10d66382a0cc
+  "version": "3.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
