--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@vanilla-extract/dynamic": "^2.1.0",
     "@vercel/speed-insights": "^1.0.10",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.0.6",
     "next": "^14.1.3",
     "react": "^18",
