--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "omijaia",
-  "version": "3.1.0",
+  "version": "3.1.5",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@vanilla-extract/dynamic": "^2.1.0",
     "@vercel/speed-insights": "^1.0.10",
+    "axios": "^1.6.8",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.0.6",
     "next": "^14.1.3",
@@ -32,6 +33,7 @@
     "@storybook/react": "^7.6.17",
     "@storybook/test": "^7.6.17",
     "@svgr/webpack": "^8.1.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
